<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/black_fur">

    <RelativeLayout
        android:id="@+id/layoutContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView android:layout_height="wrap_content"
            android:text="@string/about_cat_party"
            android:layout_width="wrap_content"
            android:id="@+id/cat_party_blurb"
            android:layout_below="@+id/about_cp"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:textColor="@color/white"/>

        <TextView android:layout_height="24dp"
            android:text="@string/panthera"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/cat_party_blurb"
            android:id="@+id/panthera"
            android:autoLink="web"
            android:textColorLink="@color/cpblue"
            android:textColor="@color/cpblue"
            android:linksClickable="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/about_cp"
            android:id="@+id/about_cp"
            android:textColor="@color/white"
            android:paddingTop="24dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/about_dev"
            android:id="@+id/about_dev"
            android:paddingBottom="20dp"
            android:paddingTop="16dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:textColor="@color/white"
            android:layout_below="@+id/panthera"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/about_aai"
            android:id="@+id/about_aai"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="20dp"
            android:textColor="@color/white"
            android:layout_below="@+id/about_dev"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_height="24dp"
            android:text="@string/support"
            android:layout_width="wrap_content"
            android:id="@+id/support"
            android:autoLink="email"
            android:textColor="@color/cpblue"
            android:textColorLink="@color/cpblue"
            android:linksClickable="true"
            android:layout_below="@+id/about_aai"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/thanks"
            android:id="@+id/thanks"
            android:paddingBottom="20dp"
            android:paddingTop="16dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:textColor="@color/white"
            android:layout_below="@+id/support"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/special_thanks"
            android:id="@+id/thanks_detail"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="20dp"
            android:textColor="@color/white"
            android:layout_below="@+id/thanks"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/legal"
            android:id="@+id/legal"
            android:paddingBottom="20dp"
            android:paddingTop="16dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:textColor="@color/white"
            android:layout_below="@+id/thanks_detail"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/legal_detail"
            android:id="@+id/legal_detail"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="20dp"
            android:textColor="@color/white"
            android:layout_below="@+id/legal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>
</ScrollView>