<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/margin24"
        android:layout_marginBottom="@dimen/margin20"
        android:layout_marginRight="@dimen/margin24"
        android:layout_marginEnd="@dimen/margin24"
        android:layout_marginLeft="@dimen/margin24"
        android:layout_marginStart="@dimen/margin24"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/ask_party"
        android:id="@+id/textPitch" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/secondary_text_light"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="@dimen/margin24"
        android:layout_marginRight="@dimen/margin24"
        android:layout_marginEnd="@dimen/margin24"
        android:layout_marginLeft="@dimen/margin24"
        android:layout_marginStart="@dimen/margin24"
        android:text="@string/rate_ask"
        android:id="@+id/textAsk"
        android:layout_below="@+id/textPitch"/>

    <Button
        android:background="@android:color/transparent"
        android:textColor="@color/cpbluedark"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginBottom="@dimen/margin8"
        android:text="@string/okay"
        android:id="@+id/buttonOkay"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/buttonWait"
        android:layout_toStartOf="@+id/buttonWait" />

    <Button
        android:background="@android:color/transparent"
        android:textColor="@color/cpbluedark"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginBottom="@dimen/margin8"
        android:text="@string/not_now"
        android:id="@+id/buttonWait"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/buttonNo"
        android:layout_toStartOf="@+id/buttonNo" />

    <Button
        android:background="@android:color/transparent"
        android:textColor="@color/cpbluedark"
        android:layout_width="wrap_content"
        android:layout_marginBottom="@dimen/margin8"
        android:layout_height="36dp"
        android:text="@string/no"
        android:id="@+id/buttonNo"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>