<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_margin="24dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:text="@string/delete_vips"
        android:id="@+id/textPitch" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:background="@android:color/transparent"
        android:textColor="@color/cpbluedark"
        android:text="@string/thats_okay"
        android:id="@+id/yes_delete"
        android:layout_marginBottom="8dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:background="@android:color/transparent"
        android:textColor="@color/cpbluedark"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:text="@string/go_back"
        android:id="@+id/dont_delete"
        android:layout_marginBottom="8dp"
        android:layout_alignTop="@+id/yes_delete"
        android:layout_toLeftOf="@+id/yes_delete"
        android:layout_toStartOf="@+id/yes_delete" />

</RelativeLayout>